--- a/style.css
+++ b/style.css
@@ -2,11 +2,90 @@
   margin: 0px;
   padding: 0px;
 }
+
 html {
   box-sizing: border-box;
+  font-family:'Josefin Sans', sans-serif;
+  max-width: 1440px;
 }
+
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
+
+.heading {
+  min-height: 120px;
+}
+
+.logo {
+  width: 158px; 
+  height: 33px;
+  padding-top: 70px;
+  padding-left: 155px;
+  cursor: pointer;
+}
+
+.container {
+  display: flex;
+  flex-direction: row-reverse;
+  /* flex-wrap: wrap; */
+}
+
+#image {
+  position: relative;
+  margin-top: -120px;
+}
+
+#image img {
+  width: 626px;
+}
+
+.content {
+  max-width: 60%;
+  margin: auto;
+  padding-top: 120px;
+}
+
+.content h1 {
+  font-size: 4em;
+  font-weight: 600;
+  line-height: 1.1em;
+  letter-spacing: 0.3em;
+}
+
+.content h1 span {
+  font-weight: 100;
+  color: hsl(0, 36%, 70%);
+}
+
+.content p {
+  padding-top: 40px;
+  font-size: 1em;
+  line-height: 1.8em;
+  color: hsl(0, 36%, 70%);
+}
+
+.input {
+  margin-top: 40px;
+  width: 400px;
+  line-height: 50px;
+  padding-left: 20px;
+  border-radius: 50px;
+  border-width: thin;
+  border-color: hsl(0, 36%, 70%);
+  float: left;
+}
+
+.btn {
+  margin-top: 40px;
+  line-height: 52px;
+  width: 100px;
+  border-radius: 50px;
+  border:0px;
+  margin-left: -50px;
+  cursor: pointer;
+  background-image: linear-gradient(hsl(0, 36%, 70%),hsl(0, 93%, 68%));
+}
+
