--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ html {
   box-sizing: border-box;
   font-family:'Josefin Sans', sans-serif;
   max-width: 1440px;
+  background-image: url(images/bg-pattern-desktop.svg);
+  background-repeat: no-repeat;
+  background-size:contain;
 }
 
 *,
@@ -76,6 +79,9 @@ html {
   border-width: thin;
   border-color: hsl(0, 36%, 70%);
   float: left;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400;
+  color: hsl(0, 36%, 70%);
 }
 
 .btn {
